welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:9: error: type mismatch;
 found   : Int
 required: Boolean
	return compte
               ^arrayFront9:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (compte >= 1) 
        ^